Attempt to fix icon spacing

--- a/assets/_sass/_default.scss
+++ b/assets/_sass/_default.scss
@@ -227,7 +227,7 @@ pre code {
 .promo .meta a:hover {
   color: darken($color, 15%);
 }
-.promo .social-media {
+/*.promo .social-media {
   background: darken($color, 15%);
   padding: 10px 0;
   margin: 0 auto;
@@ -239,7 +239,7 @@ pre code {
   margin-top: 0;
   position: relative;
   top: -5px;
-}
+}*/
 /* ======= About Section ======= */
 .about {
   padding: 80px 0;
